--- a/src/markdown/first-bounty.mdx
+++ b/src/markdown/first-bounty.mdx
@@ -45,7 +45,7 @@ Edited Request:
 
 <img src="https://miro.medium.com/v2/resize:fit:1004/format:webp/1*wKcmALMMwAQ4CyvVbjzbgQ.png" alt="image" />
 
-I was able to change the base_amount from $10 to $1.
+I was able to change the `base_amount` from $10 to $1.
 
 
 ## Timeline
