--- a/src/markdown/reset-hijacking.mdx
+++ b/src/markdown/reset-hijacking.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: "Exploiting Password Reset Vulnerabilities: A Case Study",
   date: "2025-01-26",
-  summary: "The vulnerability was found in the password reset mechanism of the platform, specifically in how the `emailKey` parameter was handled in the form data. By altering this parameter, an attacker could redirect password reset requests to their own malicious website.",
+  summary: "An attacker is able to control the content of the email and hijack the reset password link",
 };
 
 # Exploiting Password Reset Vulnerabilities: A Case Study
