--- a/src/markdown/use-other-user-credit-card.mdx
+++ b/src/markdown/use-other-user-credit-card.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
   title: "Understanding Payment Workflow Vulnerabilities: A Case of Improper Authorization",
   date: "2025-01-25",
-  summary: "An exploration of how weak authorization in payment processing APIs can lead to misuse and fraud, and how to address such vulnerabilities.",
+  summary: "A vulnerability that allows unauthorized user to use company credit card to upgrade their account.",
 };
 
 ## Introduction
